Summary of important user-visible changes for statistics 1.2.3:
-------------------------------------------------------------------

 ** Made sure that output of nanstd is real.

 ** Fixed second output of nanmax and nanmin.

 ** Corrected handle for outliers in boxplot.

Summary of important user-visible changes for statistics 1.2.2:
-------------------------------------------------------------------

 ** Fixed documentation of dendogram and hist3 to work with TexInfo 5.

Summary of important user-visible changes for statistics 1.2.1:
-------------------------------------------------------------------

 ** The following functions are new:

      pcares  pcacov  runstest  stepwisefit hist3

 ** dendogram now returns the leaf node numbers and order that the nodes were
    displayed in.

 ** New faster implementation of princomp.

Summary of important user-visible changes for statistics 1.2.0:
-------------------------------------------------------------------

 ** The following functions are new:

      regress_gp  dendogram   plsregress

 ** New functions for the generalized extreme value (GEV) distribution:
      
      gevcdf gevfit gevfit_lmom gevinv gevlike gevpdf gevrnd gevstat
      
 ** The interface of the following functions has been modified:

      mvnrnd

 ** `kmeans' has been fixed to deal with clusters that contain only
    one element.

 ** `normplot' has been fixed to avoid use of functions that have been
    removed from Octave core. Also, the plot produced should now display some
    aesthetic elements and appropriate legends.

 ** The help text of `mvtrnd' has been improved.

 ** Package is no longer autoloaded.

Summary of important user-visible changes for statistics 1.1.3:
-------------------------------------------------------------------

 ** The following functions are new in 1.1.3:

      copularnd mvtrnd

 ** The functions mnpdf and mnrnd are now also usable for greater numbers
    of categories for which the rows do not exactly sum to 1.