@@ -6,6 +6,10 @@ Summary of important user-visible changes for statistics 1.2.3:
  ** Fixed second output of nanmax and nanmin.
 
  ** Corrected handle for outliers in boxplot.
+ 
+ ** The following functions are new:
+ 
+    wishrnd iwishrnd 
 
 Summary of important user-visible changes for statistics 1.2.2:
 -------------------------------------------------------------------
@@ -19,8 +23,7 @@ Summary of important user-visible changes for statistics 1.2.1:
 
       pcares  pcacov  runstest  stepwisefit hist3
 
- ** dendogram now returns the leaf node numbers and order that the nodes were
-    displayed in.
+ ** dendogram now returns the leaf node numbers and order that the nodes were displayed in.
 
  ** New faster implementation of princomp.
 
